--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,6 +9,6 @@
 <body>
     <h1>This Is About Me Page</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, expedita sapiente eos, modi sit dignissimos numquam quos perspiciatis voluptates facilis in cum dolorem dolores! Commodi voluptatibus exercitationem ipsam necessitatibus ut! Vero hic pariatur delectus laboriosam recusandae possimus, blanditiis voluptas nobis?</p>
+    <p>Nothing to say </p>
 </body>
 </html>
